updated my portfolio

--- a/src/index.css
+++ b/src/index.css
@@ -2,38 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-#root{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+#root {
+  width: 100%;
+  min-height: 100dvh;
 }
 
-body{
-  background-color: black;
-  color: white;
-}
-
-.project-card {
-  transition: transform 0.3s ease;
-}
-
-.project-card:hover {
-  transform: scale(1.05);
-}
-
-.project-card h4 {
-  transition: opacity 0.3s ease;
-}
-
-.project-card:hover h4 {
-  opacity: 0.7;
-}
-
-.project-image {
-  transition: transform 0.3s ease;
-}
-
-.project-card:hover .project-image {
-  transform: scale(1.1);
+@layer base {
+  body {
+    @apply bg-zinc-50 text-zinc-900 antialiased;
+  }
 }
